# dental-clinic-outbound

./: .env.example  .gitignore  README.md  agent.py  backlog.md  config.py  create_dispatch_rule.py  dialer.py  knowledge_base.txt  make_call.py  prompt.py  pyproject.toml  scheduler.py  tara_pronunciation_dict.json  test_agent_console.py  test_tts.py
dental_clinic_outbound.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scratch/: check_sheet.py  test_dial.py
src/audio/: clean_tts.py
src/tools/: google_calendar.py  llm_context.py  schema.py  sheets.py
